--- a/legal-notices.adoc
+++ b/legal-notices.adoc
@@ -1,9 +1,10 @@
 ---
-permalink:  legal-notices.html
+permalink: legal-notices.html
 sidebar: sidebar
-keywords: # no keywords
-summary: # no summary
+keywords:
+summary:
 ---
+
 = Legal notices
 :icons: font
 :imagesdir: ./media/
@@ -14,5 +15,6 @@ include::https://raw.githubusercontent.com/NetAppDocs/common/main/_include/commo
 // Include the open source notice intro
 include::https://raw.githubusercontent.com/NetAppDocs/common/main/_include/open-source-notice-intro.adoc[]
 
-
 // Add required link(s)
+* https://docs.netapp.com/us-en/console-setup-admin/media/notice.pdf[Notice for NetApp Console^]
+* link:media/NOTICE-storageservices.pdf[Notice for NetApp Console management of StorageGRID systems^]
