--- a/task-administer-storagegrid.adoc
+++ b/task-administer-storagegrid.adoc
@@ -53,7 +53,6 @@ The Console doesn't currently support the Tenant Manager. Although you can creat
 | Configuration
 | 
 * Grid passwords
-* Traffic classification > Metrics
 * Security settings > Browser inactivity timeout
 * Single sign-on 
 * SNMP agent > MIB file for BMC interface
@@ -68,25 +67,21 @@ The Console doesn't currently support the Tenant Manager. Although you can creat
 
 | 
 * Grid topology
-* Logs
-* Metrics, including all links to Prometheus metrics and Grafana dashboards from other places in the UI.
+* Log collection
 * All options for legacy alarms
 * Link cost
 * NMS entities
-
-
 |===
 
-== Switch to the advanced view
+== Switch to Grid Manager
 
-Open a StorageGRID system and select the advanced view option.
+Open a StorageGRID system and select the Grid Manager option.
 
 .Steps
 
 . From the *Systems* page, open the StorageGRID system.
 
-. In the top-right, select *Switch to Advanced View*.
-
+. In the top-right, select *Switch to Grid Manager*.
 
 . Use Grid Manager to manage the StorageGRID system.
 
