--- a/task-remove-storagegrid.adoc
+++ b/task-remove-storagegrid.adoc
@@ -16,8 +16,7 @@ summary: Remove a StorageGRID system if you no longer want to manage it from the
 Remove a StorageGRID system if you no longer want to manage it from the NetApp Console.
 
 .Required NetApp Console role:
-Storage admin. link:https://docs.netapp.com/us-en/bluexp-setup-admin/reference-iam-predefined-roles.html[Learn about NetApp Console access roles.^]
-
+Storage admin. link:https://docs.netapp.com/us-en/console-setup-admin/reference-iam-predefined-roles.html[Learn about NetApp Console access roles^].
 
 Removing the system from the Console doesn't affect the StorageGRID system. You can re-add it to the Console at any time.
 
